navbar fixes, overflow fixes
overflow:auto disabled for places where it causes scrolling, navbar adds margin on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,6 @@ html{
 }
 *{
     box-sizing: border-box;
-    overflow:auto;
 }
 a{
     color:inherit;
@@ -106,6 +105,7 @@ footer{
     margin:40px auto;
     padding:20px;
     line-height:2.4rem;
+    overflow: auto;
 }
 
 .border-y{
@@ -149,5 +149,8 @@ footer{
     }
     #ideoAside img, .ideoAside img{
         height:280px;
+    }
+    .nav-item{
+        margin-top:10px;
     }
 }
